Version 7.8.2
-------------

- Allow use of custom AndroidRavenFactory. (thanks kassim)

Version 7.8.1
-------------

- Make Breadcrumbs serializable.
- Don't log errors in RavenServletRequestListener if Raven hasn't been initialized.

Version 7.8.0
-------------

- Add Android support under the ``raven-android`` subproject.
- Add Filters to drop all Raven logs before they go to the Sentry server.
- Loosen permission on some Appender/Handler methods to allow for easier overriding. (thanks briprowe)

Version 7.7.1
-------------

- Add ``raven.maxmessagelength`` DSN option. (thanks vektory79)
- Add ``Buffer`` interface, used to store events that fail to be sent to the Sentry server.
  Includes a DiskBuffer implementation and related ``raven.buffer.*`` options.
- Broke out many helper methods inside of ``DefaultRavenFactory`` to allow for easier
  overrides.
- Add a way to retrieve the thread's last sent Event ID, if any. Useful for integrating
  with the user feedback feature.
- Add ``raven.async.queue.overflow`` option for controlling what to do when the async
  executor queue is full. (thanks barogi)

Version 7.7.0
-------------

- Add static ``Raven.capture`` methods that send to the most recently constructed Raven instance.
- Add support for setting ``ravenFactory``, ``release``, ``environment`` and ``serverName``
  via JNDI, System Environment or Java System Properties (like the DSN).
- Send headers as an array of arrays, no longer wrapped in added apostrophes.

Version 7.6.0
-------------

- Add ``environment`` property to events and appenders.

Version 7.5.0
-------------

- Add support for configuring an HTTP proxy in the DSN.
- Add more debugging information to ``RavenFactory.ravenInstance``.
- Add ``formatted`` field to JSON payload if possible.

Version 7.4.0
-------------

- Changed default ``raven.async.queuesize`` from unlimited to 50.
- Add callback system for exceptions raised while attempting to send events.

Version 7.3.0
-------------
