@@ -2,6 +2,7 @@ Version 7.8.2
 -------------
 
 - Allow use of custom AndroidRavenFactory. (thanks kassim)
+- Add ``raven.sample.rate`` DSN option to optionally reduce the number of events sent to the server.
 
 Version 7.8.1
 -------------
